# web

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yaml  setup.cfg
backend/: .gitignore  README.md  example.py  setup.py
backend/ClownEntertainment_Common.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/clownentertainment/: jwtua.py
backend/clownentertainment/website/: __init__.py  __main__.py  content.py  example.py  users.py  utils.py
backend/website/: __init__.py  __main__.py  content.py  users.py  utils.py
common/: .gitignore  README.md  alembic.ini  setup.py
common/database/: __init__.py
common/database/models/: bases.py  dbconnector.py  dbmodels.py
common/migrations/: env.py
common/migrations/versions/: 000000000000.py  8ddd44257b8c_first_revision.py  cf97b4cf5593_deleted_online_table.py
docker/alembic/: Dockerfile
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/notifier/: Dockerfile
envvar/: env
frontend/: i18n-extract.py  package-lock.json  package.json  tsconfig.paths.json
frontend/src/: index.tsx
frontend/src/containers/: App.tsx
notifier/: client.py  server.py
services/: .gitignore  README.md  setup.py
services/Clowns_Entertainment_Services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/notifier/: abs.py  client.py  server.py
system/docker/notifier/: Dockerfile
system/docker/postgres/: Dockerfile
tsfrontend/: .gitignore  craco.config.js  package-lock.json  package.json
tsfrontend/src/containers/: App.tsx
tsfrontend/src/messages/: en.json  (+1 more)
(+53 files in other folders)
