[metadata]
name = Paket
description = Databases for the "Citatnik" project

[options]
packages = find_namespace:
include_package_data = True
zip_safe = False

install_requires =
    starlette
    uvicorn
    zmq
    databases
    asyncpg
    fastapi_mail
    alembic
    psycopg2-binary

testing =
    setuptools
    pytest

[options.packages.find]
where = .
exclude =
    frontend*
    docker*
    common/migrations*
    common/alembic.ini

